--- a/index.css
+++ b/index.css
@@ -557,6 +557,6 @@ p {
 .img_style{
   width: 280px;
   height: 250px;
-  border: tomato solid 1px;
+  border: mediumpurple solid 1px;
   border-radius: 15px;
 }
