--- a/index.css
+++ b/index.css
@@ -200,7 +200,7 @@ p {
   font-size: 70px;
   margin: auto;
   color: var(--color-blue);
-  border: 1px solid var(--color-blue);
+  border: 1px solid var(--color-pink);
   border-radius: 50%;
   margin-bottom: 16px;
 }
